Replaced ocean scene with standard effect. Fine tuned logo fallback

--- a/games/ocean_scene.html
+++ b/games/ocean_scene.html
@@ -25,9 +25,6 @@
         <div class="row">
           <h3>Ocean Scene</h3>
           <p>The planet Ibidan is covered entirely in ocean, with a few scattered islands and geographical features.</p>
-          <p>TODO: Reflections</p><span id="waterSize"></span>
-          <p>webgl gpgpu water</p><span id="options"> </span>
-          <p>Water size</p>
           <div class="ocean_scene"></div>
         </div>
       </div>
@@ -44,6 +41,7 @@
   <script src="/vendor/threejs/examples/js/SimplexNoise.js"></script>
   <script src="/vendor/threejs/examples/js/GPUComputationRenderer.js"></script>
   <script src="/vendor/threejs/examples/js/Mirror.js"></script>
+  <script src="/vendor/threejs/examples/js/WaterShader.js"></script>
   <script src="/vendor/ocean/water-material.js"></script>
   <script src="/vendor/Live2D-WebGL-SDK/lib/live2d.min.js"></script>
   <script src="/vendor/Live2D-WebGL-SDK/framework/Live2DFramework.js"></script>
