--- a/about.html
+++ b/about.html
@@ -58,6 +58,7 @@
   <script src="/vendor/threejs/examples/js/SimplexNoise.js"></script>
   <script src="/vendor/threejs/examples/js/GPUComputationRenderer.js"></script>
   <script src="/vendor/threejs/examples/js/Mirror.js"></script>
+  <script src="/vendor/threejs/examples/js/WaterShader.js"></script>
   <script src="/vendor/ocean/water-material.js"></script>
   <script src="/vendor/Live2D-WebGL-SDK/lib/live2d.min.js"></script>
   <script src="/vendor/Live2D-WebGL-SDK/framework/Live2DFramework.js"></script>
