--- a/wiki/mmo.html
+++ b/wiki/mmo.html
@@ -51,6 +51,7 @@ Ship mode:</li><li>PvP battles</li><li>Explore the skies and fight flying monste
   <script src="/vendor/threejs/examples/js/SimplexNoise.js"></script>
   <script src="/vendor/threejs/examples/js/GPUComputationRenderer.js"></script>
   <script src="/vendor/threejs/examples/js/Mirror.js"></script>
+  <script src="/vendor/threejs/examples/js/WaterShader.js"></script>
   <script src="/vendor/ocean/water-material.js"></script>
   <script src="/vendor/Live2D-WebGL-SDK/lib/live2d.min.js"></script>
   <script src="/vendor/Live2D-WebGL-SDK/framework/Live2DFramework.js"></script>
