--- a/wiki/tree-of-life.html
+++ b/wiki/tree-of-life.html
@@ -57,6 +57,7 @@ Deyum’s instructions from Eden to grow the tree. Hyperion is made of photonic 
   <script src="/vendor/threejs/examples/js/SimplexNoise.js"></script>
   <script src="/vendor/threejs/examples/js/GPUComputationRenderer.js"></script>
   <script src="/vendor/threejs/examples/js/Mirror.js"></script>
+  <script src="/vendor/threejs/examples/js/WaterShader.js"></script>
   <script src="/vendor/ocean/water-material.js"></script>
   <script src="/vendor/Live2D-WebGL-SDK/lib/live2d.min.js"></script>
   <script src="/vendor/Live2D-WebGL-SDK/framework/Live2DFramework.js"></script>
