Prettied up gallery

--- a/gallery/posters.html
+++ b/gallery/posters.html
@@ -24,16 +24,16 @@
       <div id="content">
         <div class="row">
           <h2>Posters</h2>
-          <ul class="gallery">
-            <li><a href="/universe/art/production/posters/Atlantis - Yedin's Temple-01.png"><img src="/universe/art/production/posters/thumb_Atlantis - Yedin's Temple-01.png"></a></li>
-            <li><a href="/universe/art/production/posters/Exordium Redesign-01.png"><img src="/universe/art/production/posters/thumb_Exordium Redesign-01.png"></a></li>
-            <li><a href="/universe/art/production/posters/Feature Poster-01.png"><img src="/universe/art/production/posters/thumb_Feature Poster-01.png"></a></li>
-            <li><a href="/universe/art/production/posters/Langenium - Cosmic Archetypes-01.png"><img src="/universe/art/production/posters/thumb_Langenium - Cosmic Archetypes-01.png"></a></li>
-            <li><a href="/universe/art/production/posters/Langenium Airship Academy-01.png"><img src="/universe/art/production/posters/thumb_Langenium Airship Academy-01.png"></a></li>
-            <li><a href="/universe/art/production/posters/Langenium Fall of the Elx-01.png"><img src="/universe/art/production/posters/thumb_Langenium Fall of the Elx-01.png"></a></li>
-            <li><a href="/universe/art/production/posters/Langenium Master Timeline-01.png"><img src="/universe/art/production/posters/thumb_Langenium Master Timeline-01.png"></a></li>
-            <li><a href="/universe/art/production/posters/MMO Poster-01.png"><img src="/universe/art/production/posters/thumb_MMO Poster-01.png"></a></li>
-          </ul>
+          <div class="ui four stackable cards">
+            <div class="ui card"><a class="image" href="/universe/art/production/posters/Atlantis - Yedin's Temple-01.png"><img src="/universe/art/production/posters/thumb_Atlantis - Yedin's Temple-01.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/posters/Exordium Redesign-01.png"><img src="/universe/art/production/posters/thumb_Exordium Redesign-01.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/posters/Feature Poster-01.png"><img src="/universe/art/production/posters/thumb_Feature Poster-01.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/posters/Langenium - Cosmic Archetypes-01.png"><img src="/universe/art/production/posters/thumb_Langenium - Cosmic Archetypes-01.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/posters/Langenium Airship Academy-01.png"><img src="/universe/art/production/posters/thumb_Langenium Airship Academy-01.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/posters/Langenium Fall of the Elx-01.png"><img src="/universe/art/production/posters/thumb_Langenium Fall of the Elx-01.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/posters/Langenium Master Timeline-01.png"><img src="/universe/art/production/posters/thumb_Langenium Master Timeline-01.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/posters/MMO Poster-01.png"><img src="/universe/art/production/posters/thumb_MMO Poster-01.png"></a></div>
+          </div>
         </div>
       </div>
     </div>
