--- a/gallery/concept-art.html
+++ b/gallery/concept-art.html
@@ -24,28 +24,28 @@
       <div id="content">
         <div class="row">
           <h2>Concept Art</h2>
-          <ul class="gallery">
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Cellocher.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Cellocher.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Drak.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Drak.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Elx.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Elx.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Epoch Langenius.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Epoch Langenius.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Ganetti.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Ganetti.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Hircus.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Hircus.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Host.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Host.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Krahm.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Krahm.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Lupus.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Lupus.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Lux Atlantis.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Lux Atlantis.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Mantis.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Mantis.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Maya.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Maya.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Mon-Kis.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Mon-Kis.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Rise of Guardians.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Rise of Guardians.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Robot.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Robot.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Sinnis.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Sinnis.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Tigris.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Tigris.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_Torton.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Torton.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_WERP.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_WERP.png"></a></li>
-            <li><a href="/universe/art/production/covers/Langenium - Lux Atlas_World Eater.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_World Eater.png"></a></li>
-          </ul>
+          <div class="ui four stackable cards">
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_Cellocher.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Cellocher.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_Drak.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Drak.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_Elx.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Elx.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_Epoch Langenius.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Epoch Langenius.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_Ganetti.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Ganetti.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_Hircus.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Hircus.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_Host.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Host.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_Krahm.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Krahm.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_Lupus.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Lupus.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_Lux Atlantis.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Lux Atlantis.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_Mantis.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Mantis.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_Maya.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Maya.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_Mon-Kis.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Mon-Kis.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_Rise of Guardians.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Rise of Guardians.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_Robot.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Robot.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_Sinnis.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Sinnis.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_Tigris.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Tigris.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_Torton.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_Torton.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_WERP.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_WERP.png"></a></div>
+            <div class="ui card"><a class="image" href="/universe/art/production/covers/Langenium - Lux Atlas_World Eater.png"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_World Eater.png"></a></div>
+          </div>
         </div>
       </div>
     </div>
