--- a/gallery/index.html
+++ b/gallery/index.html
@@ -24,12 +24,14 @@
       <div id="content">
         <div class="row">
           <h2>Gallery
-            <ul class="gallery">
-              <li><a href="/gallery/concept-art.html">
-                  <h3>Concept Art</h3><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_World Eater.png"></a></li>
-              <li><a href="/gallery/posters.html">
-                  <h3>Posters</h3><img src="/universe/art/production/posters/thumb_Feature Poster-01.png"></a></li>
-            </ul>
+            <div class="ui stackable cards">
+              <div class="ui card teal"><a class="image" href="/gallery/concept-art.html"><img src="/universe/art/production/covers/thumb_Langenium - Lux Atlas_World Eater.png"></a>
+                <div class="content"><a class="header" href="/gallery/concept-art.html">Concept Art</a></div>
+              </div>
+              <div class="ui card yellow"><a class="image" href="/gallery/posters.html"><img src="/universe/art/production/posters/thumb_Feature Poster-01.png"></a>
+                <div class="content"><a class="header" href="/gallery/concept-art.html">Posters</a></div>
+              </div>
+            </div>
           </h2>
         </div>
       </div>
