Added news update

--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
         </div>
         <div class="row">
           <div class="news">
-            <h2>News</h2><h3>Working with audio, making songs and fighting round the world!</h3>
+            <h2>News</h2><h3>Lots of minor fixes, the journey continues</h3>
+
+<p><em>21st of May 2017</em></p>
+
+<p>I&#39;ve updated THREE.JS and Semantic UI, given the site a bit of spit and polish and restored the 3D logo with an effect a bit closer to the original. Writing content in a Markdown file feels so 5 years ago now so I&#39;m thinking of using <a href="https://medium.com/@mail_59849">my Medium account</a> posts as a dev blog for this site, will need to look into their API and find a way to integrate that into my content builder process.</p>
+
+<h3>Working with audio, making songs and fighting round the world!</h3>
 
 <p><em>25th of December 2016</em></p>
 
