Cleaned up Lux Mundi Atlas page. Going to turn Wiki homepage into card layout using Semantic

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -83,8 +83,8 @@
                     <li><a href="/wiki/atlantis-v-olympus.html">Atlantis vs Olympus</a>
                       <p>The restraint of evil and triumph of good</p>
                     </li>
-                    <li><a href="/wiki/lux-atlas.html">Lux Atlas</a>
-                      <p>The creation of the infinite universe</p>
+                    <li><a href="/wiki/lux-mundi-atlas.html">Lux Mundi Atlas</a>
+                      <p>The emergence into the infinite universe</p>
                     </li>
                     <li><a href="/wiki/phoenix-day.html">Phoenix Day</a>
                       <p>The destruction of Earth and migration to Ibidan</p>
