--- a/wiki/lux-atlas.html
+++ b/wiki/lux-atlas.html
@@ -23,9 +23,13 @@
       </header>
       <div id="content">
         <div class="row">
-          <h2>Lux Atlas</h2><p>This is the story of our universe and where Earth really came from and what the Elx are really up to.</p>
+          <h2>Lux Atlas</h2><p>Lux Mundi Atlas means Atlas&#39; World Light, a story that occurred in a previous iteration of the universe and led to this one - at least in terms of lore and mythology. In terms of linear causation, Atlas did not create the universe. In terms of the story, Atlas allowed the Earth to breach the barrier between consciousness and existence and become a real world in the universe.</p>
 
-<p>TBA</p>
+<p>This is the story of our universe and where Earth really came from and what the Elx are really up to, leading up to Phoenix Day when the human race breaches an ancient network of wormholes and escapes their own destruction. This resolves a paradox deep within the structure of spacetime as future humanity are destined to help create the universe.</p>
+
+<p>It&#39;d be anticlimactic to give the Elx any kind of an end game.. so this is more about littering all of existence with references to their race and what various individuals achieved after the fall of their homeworld.</p>
+
+<p>Atlantis from the previous iteration of the universe will leave artefacts on Antarctica on Earth.</p><img src="/universe/art/concept-art/Atlantis-01.png">
         </div>
       </div>
     </div>
