Added images to race pages

--- a/wiki/cellocher.html
+++ b/wiki/cellocher.html
@@ -30,7 +30,7 @@
 
 <p>As life develops around a Cellocher star,
 the songs of the life around it feed into the
-persona of the Cellocher spawn.</p>
+persona of the Cellocher spawn.</p><img src="/universe/art/production/covers/Langenium - Lux Atlas_Cellocher.png">
         </div>
       </div>
     </div>
