--- a/wiki/drak.html
+++ b/wiki/drak.html
@@ -24,7 +24,7 @@
       <div id="content">
         <div class="row"><p>The Drak are as rare as they are famous, millenia can go by without a sighting - leading many to believe that they are a myth.</p>
 
-<p>Drak can freely travel across all dimensions which gives them the ability to manifest anything - given the right specifications. The Drak enjoy building things for others, giving them a purpose.</p>
+<p>Drak can freely travel across all dimensions which gives them the ability to manifest anything - given the right specifications. The Drak enjoy building things for others, giving them a purpose.</p><img src="/universe/art/production/covers/Langenium - Lux Atlas_Drak.png">
         </div>
       </div>
     </div>
