--- a/wiki/elx.html
+++ b/wiki/elx.html
@@ -26,7 +26,7 @@
 
 <p>The first intelligent race in the universe, the Elx had a keen understanding of truthbut lacked the wisdom for wielding it. This led to a number of missteps including the poisoning of the Krahm homeworld’s sun.</p>
 
-<p>It is said that the Elx were wiped out by the Krahm, but no one has ever found evidenceof their decline. This is made especially problamtic due to their use of psychically controlled trees for most technology.</p>
+<p>It is said that the Elx were wiped out by the Krahm, but no one has ever found evidenceof their decline. This is made especially problamtic due to their use of psychically controlled trees for most technology.</p><img src="/universe/art/production/covers/Langenium - Lux Atlas_Cellocher.png">
         </div>
       </div>
     </div>
