--- a/wiki/ganetti.html
+++ b/wiki/ganetti.html
@@ -28,7 +28,7 @@
 
 <p>The Ganetti have a diplomacy with the Krahm built on their sheer incapacity to fight back and usefulness as translators and administrators. </p>
 
-<p>Ganetti scientists, doctors, teachers and evenyouth are scattered across the universe in search of information that could help their people survive the war and hopefully end the war peacefully.</p>
+<p>Ganetti scientists, doctors, teachers and evenyouth are scattered across the universe in search of information that could help their people survive the war and hopefully end the war peacefully.</p><img src="/universe/art/production/covers/Langenium - Lux Atlas_Ganetti.png">
         </div>
       </div>
     </div>
