--- a/wiki/krahm.html
+++ b/wiki/krahm.html
@@ -26,7 +26,7 @@
 
 <p>The Krahm Empire received much of their technologyand knowledge from the Elx, whom they repaid with genocide (to prevent them from teaching others).</p>
 
-<p>The Krahm have forces throughout the universe howeverthe sheer vastness of space means that they are yet to build up sufficient numbers and technology to control all of space.</p>
+<p>The Krahm have forces throughout the universe howeverthe sheer vastness of space means that they are yet to build up sufficient numbers and technology to control all of space.</p><img src="/universe/art/production/covers/Langenium - Lux Atlas_Krahm.png">
         </div>
       </div>
     </div>
