--- a/wiki/lupus.html
+++ b/wiki/lupus.html
@@ -26,7 +26,7 @@
 
 <p>The Krahm war forced them to scale back andconcentrate on defending their key worlds.</p>
 
-<p>The Lupus have a strong distrust of others dueto manipulation of their race by the Maya andthe way the Elx transformed the Krahm from a race of peace to a race of war.</p>
+<p>The Lupus have a strong distrust of others dueto manipulation of their race by the Maya andthe way the Elx transformed the Krahm from a race of peace to a race of war.</p><img src="/universe/art/production/covers/Langenium - Lux Atlas_Lupus.png">
         </div>
       </div>
     </div>
