--- a/wiki/maya.html
+++ b/wiki/maya.html
@@ -28,7 +28,7 @@
 
 <p>Able to traverse all of reality at will, Maya areable to retrieve any conceivable object or outcome to a situation. The cost is often paidby worship or an arrangement for subservience.</p>
 
-<p>The Maya are often blamed for the rise of the Krahm,a vicious race whose rage consumes the universe.</p>
+<p>The Maya are often blamed for the rise of the Krahm,a vicious race whose rage consumes the universe.</p><img src="/universe/art/production/covers/Langenium - Lux Atlas_Maya.png">
         </div>
       </div>
     </div>
