--- a/wiki/mon-kis.html
+++ b/wiki/mon-kis.html
@@ -26,7 +26,7 @@
 
 <p>The Mon-Kis chose to become apathetic tothis deal as they reasoned becoming less oftheir whole would diminish their enjoymentof their wish. They are legendary for their their first and final wish - for technology to grant their own wishes.</p>
 
-<p>This was at the sacrifice of Mon-Kis, the visor wearing patron of their race.</p>
+<p>This was at the sacrifice of Mon-Kis, the visor wearing patron of their race.</p><img src="/universe/art/production/covers/Langenium - Lux Atlas_Mon-Kis.png">
         </div>
       </div>
     </div>
