--- a/wiki/robot.html
+++ b/wiki/robot.html
@@ -30,7 +30,7 @@
 
 <p>Robot opts to reboot the univese in order to find out how life was able to create and sustain stars. </p>
 
-<p>When the universe reboots, Robot meets Sinnis in the void and says he will sit with him. He cannot free Sinnis as he needs him there to hold up the universe, but he will be his friend.</p>
+<p>When the universe reboots, Robot meets Sinnis in the void and says he will sit with him. He cannot free Sinnis as he needs him there to hold up the universe, but he will be his friend.</p><img src="/universe/art/production/covers/Langenium - Lux Atlas_Robot.png">
         </div>
       </div>
     </div>
