--- a/wiki/sinnis.html
+++ b/wiki/sinnis.html
@@ -27,7 +27,7 @@
 <p>An essence imprisoned in an older version of reality, Sinnis is desperate to find a way to
 instantiate himself in the universe.</p>
 
-<p>He is the void itself, the voice that whispers to all beings in the silence.</p>
+<p>He is the void itself, the voice that whispers to all beings in the silence.</p><img src="/universe/art/production/covers/Langenium - Lux Atlas_Sinnis.png">
         </div>
       </div>
     </div>
