--- a/wiki/torton.html
+++ b/wiki/torton.html
@@ -28,7 +28,7 @@
 
 <p>Despite having little technology or structures, the Tortons appear to have mastered their own mindand soul to a level no other being in existence has or ever will match.</p>
 
-<p>With a safe environment and steady food supply the Torton can live forever. Many are known to beliving for several million years.</p>
+<p>With a safe environment and steady food supply the Torton can live forever. Many are known to beliving for several million years.</p><img src="/universe/art/production/covers/Langenium - Lux Atlas_Torton.png">
         </div>
       </div>
     </div>
