--- a/wiki/host.html
+++ b/wiki/host.html
@@ -28,7 +28,7 @@
 
 <p>This could potentially be why more relatable evidence for its existence has not yet manifested.</p>
 
-<p>Proof aside, many beings have committed their lives and immeasurable effort to reach out to theirown understanding of The Host. This can lead to great good but also great wickedness.</p>
+<p>Proof aside, many beings have committed their lives and immeasurable effort to reach out to theirown understanding of The Host. This can lead to great good but also great wickedness.</p><img src="/universe/art/production/covers/Langenium - Lux Atlas_Host.png">
         </div>
       </div>
     </div>
