--- a/wiki/mantis.html
+++ b/wiki/mantis.html
@@ -26,7 +26,7 @@
 
 <p>Born on the Elx homeworld, the Mantids were ayoung race who marvelled at the wonders of the Elx living among them. </p>
 
-<p>When the Krahm came to kill the Elx, many Mantidswere killed. This trauma of losing their older friend race andbeing attacked caused the Mantids to learn aboutthe war and develop their own forces to fight back.</p>
+<p>When the Krahm came to kill the Elx, many Mantidswere killed. This trauma of losing their older friend race andbeing attacked caused the Mantids to learn aboutthe war and develop their own forces to fight back.</p><img src="/universe/art/production/covers/Langenium - Lux Atlas_Mantis.png">
         </div>
       </div>
     </div>
