--- a/wiki/tigris.html
+++ b/wiki/tigris.html
@@ -26,7 +26,7 @@
 
 <p>They have absolute mastery of the mechanics ofreality and choose to hide their vast riches andhomes within mundane seeming objects in orderto protect it.</p>
 
-<p>It is argued that the Tigris and Lupus could end thewar together however their seemingly complimentarystrengths are also the reason they cannot get along.</p>
+<p>It is argued that the Tigris and Lupus could end thewar together however their seemingly complimentarystrengths are also the reason they cannot get along.</p><img src="/universe/art/production/covers/Langenium - Lux Atlas_Tigris.png">
         </div>
       </div>
     </div>
