--- a/wiki/werp.html
+++ b/wiki/werp.html
@@ -28,7 +28,7 @@
 
 <p>The Web Energy Research Project was an artificialbrain created to continue the progress of science and save the human race from destruction.</p>
 
-<p>In an ironic twist, WERP learns to harness EM and gravitational waves to cast his will out toother machine entities, completely possessing any other form of technology to do his bidding.</p>
+<p>In an ironic twist, WERP learns to harness EM and gravitational waves to cast his will out toother machine entities, completely possessing any other form of technology to do his bidding.</p><img src="/universe/art/production/covers/Langenium - Lux Atlas_WERP.png">
         </div>
       </div>
     </div>
