--- a/gallery/posters.html
+++ b/gallery/posters.html
@@ -10,9 +10,11 @@
   <body>
     <div id="fb-root"></div>
     <div class="container">
-      <header class="row"><a class="logo" href="/" title="Langenium"><img src="/logo.png"></a>
+      <header class="row">
+        <div class="logo"><img src="/logo.png"></div>
         <nav>
           <ul>
+            <li><a href="/">Home</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/gallery">Gallery</a></li>
             <li><a href="/games">Games</a></li>
