--- a/old/media.html
+++ b/old/media.html
@@ -6,6 +6,7 @@
 		<link href="./src/vendor/semantic.css" rel="Stylesheet" />
 		<link href="./src/modes/website.css" rel="Stylesheet" />
 		<script src="./client.js"></script>
+		<script src="./client.js"></script>
 	</head>
 	<body onload="_init();">
 		<div class="ui page grid">
